--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -11,8 +11,8 @@
     <div ng-view></div>
 
     <!-- Angular -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.js"></script>
+    <script src="{% static 'blog/js/lib/angular.min.js' %}"></script>
+    <script src="{% static 'blog/js/lib/angular-route.min.js' %}"></script>
 
     <!-- Everything else -->
     <script src="{% static 'blog/js/ourAngular.js' %}"></script>
