--- a/templates/stylesheets.html
+++ b/templates/stylesheets.html
@@ -1,8 +1,5 @@
-{% load compress %}
 {% load staticfiles %}
-
-{% compress css %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'gameGap/bootstrap/css/bootstrap.css' %}" />
 
-{% endcompress %}
+<link rel="stylesheet" type="text/css" href="{% static 'gameGap/mystyles/mystyle1.css' %}" />
