--- a/gameGap/static/gameGap/views/top_new_free.html
+++ b/gameGap/static/gameGap/views/top_new_free.html
@@ -1,5 +1,5 @@
-
-<ul>
-  <li ng-repeat="item in mc.testArray">{{ item }}</li>
-</ul>
-yo
+<div class="app-item row" ng-repeat="game in mc.games">
+  <div>
+    <img src="{{game.icon_72}}">
+  </div>
+</div>
