--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body ng-controller="mainController as mc">
+<body>
 
  <nav class="navbar navbar-inverse" role="navigation" >
     <divs>
