--- a/templates/stylesheets.html
+++ b/templates/stylesheets.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'gameGap/bootstrap/css/bootstrap.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'gameGap/bootstrap/css/bootstrap.min.css' %}" />
 
 <link rel="stylesheet" type="text/css" href="{% static 'gameGap/mystyles/mystyle1.css' %}" />
