--- a/gameGap/static/gameGap/views/top_new_paid.html
+++ b/gameGap/static/gameGap/views/top_new_paid.html
@@ -1,5 +1,13 @@
-<div class="app-item row" ng-repeat="game in mc.games">
-  <div>
-    <img src="{{game.icon_72}}">
+<div class="row">  
+  <div class="app-items col-md-3" ng-repeat="game in mc.games">
+    <div class="app-item">
+      <img class="thumbnails" src="{{game.icon_72}}">
+      <div class="app-content">
+        <p class="app-title">{{game.title}}</p>
+        <p class="app-category">Category:</p>
+          <p class="app-category-type">{{game.category}}</p>
+        <p class="app-price">Free</p>
+      </div>
+    </div>
   </div>
 </div>
