added hover features and removed Top_grossing section due to redundancy

--- a/gameGap/static/gameGap/mystyles/mystyle1.css
+++ b/gameGap/static/gameGap/mystyles/mystyle1.css
@@ -6,8 +6,14 @@ body {
   color: white;
 }
 
+
 img.thumbnails {
   vertical-align: top;
+}
+
+.thumbnails:hover {
+  color: #730B0B;
+  cursor: pointer;
 }
 
 .app-items {
