--- a/gameGap/static/gameGap/views/top_new_paid.html
+++ b/gameGap/static/gameGap/views/top_new_paid.html
@@ -6,7 +6,7 @@
         <p class="app-title">{{game.title}}</p>
         <p class="app-category">Category:</p>
           <p class="app-category-type">{{game.category}}</p>
-        <p class="app-price">Free</p>
+        <p class="app-price">{{game.price}}</p>
       </div>
     </div>
   </div>
