--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
 
 <body>
 
- <nav class="navbar navbar-inverse" role="navigation" >
+ <nav class="navbar navbar-inverse barbar" role="navigation" >
     <divs>
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+            <button type="button" class="navbar-toggle">
                 <span class="sr-only">Toggle Navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -27,7 +27,7 @@
         <!-- ./navbar-header -->
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right unicorn">
-            <li><a href="/#/top_free">Top Free Games</a></li>
+            <li class="unicorn2"><a href="/#/top_free">Top Free Games</a></li>
             <li><a href="/#/top_paid">Top Paid Games</a></li>
             <li><a href="/#/top_new_free">Top New Free Games </a></li>
             <li><a href="/#/top_new_paid">Top New Paid Games</a></li>
