cut out some fluff... landing page complete

--- a/gameGap/static/gameGap/views/nothing.html
+++ b/gameGap/static/gameGap/views/nothing.html
@@ -8,5 +8,5 @@ h1, p {
 }
 </style>
 
-<h1>Looks like you found notihing, congrats!</h1>
-<p>Try a different page</p>
+<h1>Looks like you found nothing, congrats!</h1>
+<p>Now try a different page</p>
