--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
         </div>
         <!-- ./navbar-header -->
         <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav pull-left unicorn">
+            <li><a href="/#/posts">Posts</a></li>
+          </ul>
           <ul class="nav navbar-nav pull-right unicorn">
             <li class="unicorn2"><a href="/#/top_free">Top Free Games</a></li>
             <li><a href="/#/top_paid">Top Paid Games</a></li>
