--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -9,6 +9,7 @@
 <script src="{% static 'gameGap/js/controllers/topNewFreeController.js' %}"></script>
 <script src="{% static 'gameGap/js/controllers/topNewPaidController.js' %}"></script>
 <script src="{% static 'gameGap/js/controllers/topPaidController.js' %}"></script>
-
+<!-- <script src="{% static 'gameGap/js/controllers/posts.js' %}"></script>
+ -->
 <script src="{% static 'gameGap/bootstrap/js/ui-bootstrap.min.js' %}"></script>
 
