--- a/templates/stylesheets.html
+++ b/templates/stylesheets.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
+<link href='http://fonts.googleapis.com/css?family=Orbitron:500|Press+Start+2P' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" type="text/css" href="{% static 'gameGap/bootstrap/css/bootstrap.min.css' %}" />
+
 
 <link rel="stylesheet" type="text/css" href="{% static 'gameGap/mystyles/mystyle1.css' %}" />
