--- a/gameGap/static/gameGap/views/post.html
+++ b/gameGap/static/gameGap/views/post.html
@@ -1,7 +1,6 @@
-<!-- <form ng-submit="submitPost()">
+<form ng-submit="submitPost()">
   <input type="text" ng-model="post.title" />
-  <input type="text" ng-model="post.url" />
+  <input type="text" ng-model="post.subject" />
   <input type="submit" value="Add Post" />
 </form>
-Posts: {{posts}}
-Post: {{post}} -->
+Post: {{post}}
