--- a/gameGap/static/gameGap/mystyles/mystyle1.css
+++ b/gameGap/static/gameGap/mystyles/mystyle1.css
@@ -1,15 +1,29 @@
-body {
-  background: #F7F5FF;  
+/*Global CSS*/
+html, .container {
+    height: 100%;
 }
 
-.intro-logo {
-  height: auto;
-  width: auto;
+ body {
+    background-color: rgba(128, 203, 240, .91);
+    background-image: url('https://cdn.tutsplus.com/gamedev/uploads/2013/09/tileMapDiagram2.png');
+    background-position: bottom;
+    background-repeat: repeat-x;
+    height: 100%;
+    overflow: hidden;
+}
+
+.background-container {
+  background-color: rgba(255, 255, 255, .64);
+  border-radius: 10px;
+  padding: 10px;
+  min-height: 50%;
 }
 
 .unicorn {
   color: white;
 }
+
+/*app page CSS*/
 
 img.thumbnails {
   vertical-align: top;
@@ -22,7 +36,6 @@ img.thumbnails {
 
 .app-items {
   display: inline-block;
-  width: 300px;
   height: 110px;
   overflow: hidden;
 }
@@ -36,16 +49,18 @@ img.thumbnails {
 
 .app-content {
   display: inline-block;
-  padding-left: 15px;
+  padding-left: 5px;
   width: 200px;
+  margin-bottom: auto;
 }
 
 .app-content p {
+  margin-bottom: 10px;
   width: auto;
 }
 
 .app-title {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
 }
 
@@ -62,5 +77,120 @@ img.thumbnails {
 
 .app-price {
   font-weight: bold;
+  /*color: #E5E0F0;*/
   color: #a5bf55;
 }
+
+/*CSS for Post page*/
+
+.game-post-header {
+  text-align: center;
+}
+
+.game-post-tile {
+  background-color: rgba(142, 221, 31, 0.55);
+  height: inherit;
+  overflow: hidden;
+  border-radius: 6px;
+}
+
+.post-information {
+  font-size: 20px;
+  background-color: rgba(124, 95, 136, 0.67);
+  color: white;
+}
+
+.post-information > span:nth-child(2) {
+  float: right;
+}
+
+.game-post-title{
+  text-indent: 10px;
+  text-align: left;
+}
+
+.game-post-tile p {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.46);
+  margin: 0 0 10px;
+}
+
+.game-post-time {
+  float: right;
+}
+
+.comment-body {
+  text-indent: 30px;
+}
+
+.comment-body > span:nth-child(2) {
+  float: right;
+}
+
+.full-form {
+  background-color: white;
+}
+
+.form-fields {
+  background-color: red;
+}
+
+/*Modal CSS*/
+.modalDialog {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99999;
+  opacity:0;
+  pointer-events: none;
+}
+.showModal {
+  opacity:1;
+  pointer-events: auto;
+}
+.modalDialog > div {
+  width: 50%;
+  position: relative;
+  margin: 10% 25%;
+  padding: 5px 20px 10px 20px;
+  border-radius: 10px;
+  background: white;
+}
+.close {
+  background: #606061;
+  color: #FFFFFF;
+  line-height: 25px;
+  position: absolute;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -moz-box-shadow: 1px 1px 3px #000;
+  -webkit-box-shadow: 1px 1px 3px #000;
+  box-shadow: 1px 1px 3px #000;
+}
+
+.close:hover { background: #00d9ff; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
