--- a/gameGap/static/gameGap/views/top_free.html
+++ b/gameGap/static/gameGap/views/top_free.html
@@ -1,15 +1,39 @@
-<div class="row">  
-  <div class="app-items col-md-3" ng-repeat="game in mc.games">
-    <div class="app-item">
-      <a href="/#/posts">
-        <img class="thumbnails" src="{{game.icon_72}}">
-      </a>
-      <div class="app-content">
-        <p class="app-title">{{game.title}}</p>
-        <p class="app-category">Category:</p>
-          <p class="app-category-type">{{game.category}}</p>
-        <p class="app-price">Free</p>
+<div class="background-container">
+  <div class="row">  
+     <div class="app-items col-xs-12 col-sm-4 col-md-3" ng-repeat="game in mc.games">
+      <div class="app-item">
+        <!-- <a href="/#/posts"> -->
+        <div ng-click="mc.showModal()">
+          <img class="thumbnails" src="{{game.icon_72}}">
+        <div class="app-content">
+          <p class="app-title">{{game.title}}</p>
+          <p class="app-category">Category:</p>
+            <p class="app-category-type">{{game.category}}</p>
+          <p class="app-price">Free</p>
+        </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+
+<!-- <div ng-click="mc.showModal()">Open Modal</div> -->
+<div id="openModal" class=" modalDialog row" ng-class="{showModal: mc.formEntry}">
+    <div class="modalHolder col-md-12">
+        <a title="Close" class="close" ng-click="mc.hideModal()">X</a>
+        <form class="col-md-12" ng-submit="mc.addComment()">
+          <div class="full-form">
+            <div class="form-fields">
+              Post Title: <input type="text" ng-model="mc.addPost"><br>
+              Topic Field: <input type="text" ng-model="mc.addComment"><br>  
+            </div>
+            <span>
+              <button type="submit">Submit</button>
+            </span>
+          </div>
+        </form>
+    </div>
+</div>
+
+  
