--- a/gameGap/static/gameGap/views/post.html
+++ b/gameGap/static/gameGap/views/post.html
@@ -1,4 +1,5 @@
 <section class="background-container">
+  <button class="make-new-post">Create a Post</button>
   <h1 class="game-post-header">Game Posts</h1>
   <section class="game-post-tile">
     <div class="post-information">
