--- a/gameGap/static/gameGap/views/top_new_free.html
+++ b/gameGap/static/gameGap/views/top_new_free.html
@@ -2,9 +2,8 @@
   <div class="row">  
     <div class="app-items col-xs-12 col-sm-4 col-md-3" ng-repeat="game in mc.games">
       <div class="app-item">
-        <a href="/#/posts">
+        <div ng-click="mc.showModal(game)">
           <img class="thumbnails" src="{{game.icon_72}}">
-        </a>
         <div class="app-content">
           <p class="app-title">{{game.title}}</p>
           <p class="app-category">Category:</p>
@@ -12,6 +11,27 @@
           <p class="app-price">Free</p>
         </div>
       </div>
+      </div>
     </div>
   </div>
+</div>
+
+<div id="openModal" class=" modalDialog row" ng-class="{showModal: mc.formEntry}">
+    <div class="modalHolder col-md-12">
+        <a title="Close" class="close" ng-click="mc.hideModal()">X</a>
+        <form class="col-md-12" ng-submit="mc.addNewDiscussion()">
+          <h1 class="modal-header">Post and Play!</h1>
+          <div class="full-form">
+            <div class="form-fields">
+              <label for="topic">Topic:</label>
+              <input class="form-inserts" name="topic" type="text" ng-model="mc.addTopic"><br>  
+              <label for="comment">Post Content:</label> 
+              <textarea  class="form-inserts" name="comment" ng-model="mc.addPost"></textarea><br>     
+            <span>
+              <button class="form-submit" type="submit">Submit</button>
+            </span>
+            </div>
+          </div>
+        </form>
+    </div>
 </div>
